--- a/portfolio.html
+++ b/portfolio.html
@@ -740,7 +740,7 @@
                                         <img loading="eager" alt="" src="https://assets-global.website-files.com/6499b4ba68bde9623cafd7f2/64d49e985f8da735703ad3ab_La%20Vie-Cover.webp" class="c-img"/>
                                         <div class="c-img-overlay"></div>
                                     </div>
-                                    <a click="" difference="" href="/projects/la-vie" class="c-portfolio-item w-inline-block">
+                                    <a click="" difference="" href="/la-vie" class="c-portfolio-item w-inline-block">
                                         <div class="c-shape portfolio w-embed">
                                             <svg width="100%" viewBox="0 0 67 67" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M55.1706 0.784986L66.2856 11.6036L44.2038 33.6854L65.9892 55.619L55.1706 66.5858L33.0888 44.8004L11.3034 66.4376L0.484801 55.4708L21.9738 33.6854L0.336601 11.9L11.3034 0.784986L33.0888 22.4222L55.1706 0.784986Z" fill="white"/>
@@ -760,7 +760,7 @@
                                         <img loading="eager" alt="" src="https://assets-global.website-files.com/6499b4ba68bde9623cafd7f2/64d49d6710617f7672398d96_Shaw-Cover.webp" class="c-img"/>
                                         <div class="c-img-overlay"></div>
                                     </div>
-                                    <a click="" difference="" href="/projects/shaw" class="c-portfolio-item w-inline-block">
+                                    <a click="" difference="" href="/shaw" class="c-portfolio-item w-inline-block">
                                         <div class="c-shape portfolio w-embed">
                                             <svg width="100%" viewBox="0 0 67 67" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M55.1706 0.784986L66.2856 11.6036L44.2038 33.6854L65.9892 55.619L55.1706 66.5858L33.0888 44.8004L11.3034 66.4376L0.484801 55.4708L21.9738 33.6854L0.336601 11.9L11.3034 0.784986L33.0888 22.4222L55.1706 0.784986Z" fill="white"/>
@@ -800,7 +800,7 @@
                                         <img loading="eager" alt="" src="https://assets-global.website-files.com/6499b4ba68bde9623cafd7f2/64d49ecd76464e68693da935_PenthouseLaVie-%20Image%201.webp" class="c-img"/>
                                         <div class="c-img-overlay"></div>
                                     </div>
-                                    <a click="" difference="" href="/projects/penthouse-at-la-vie" class="c-portfolio-item w-inline-block">
+                                    <a click="" difference="" href="/penthouse-at-la-vie" class="c-portfolio-item w-inline-block">
                                         <div class="c-shape portfolio w-embed">
                                             <svg width="100%" viewBox="0 0 67 67" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M55.1706 0.784986L66.2856 11.6036L44.2038 33.6854L65.9892 55.619L55.1706 66.5858L33.0888 44.8004L11.3034 66.4376L0.484801 55.4708L21.9738 33.6854L0.336601 11.9L11.3034 0.784986L33.0888 22.4222L55.1706 0.784986Z" fill="white"/>
@@ -820,7 +820,7 @@
                                         <img loading="eager" alt="" src="https://assets-global.website-files.com/6499b4ba68bde9623cafd7f2/64d49db9c96909a62edbc443_Watergate-Cover.webp" class="c-img"/>
                                         <div class="c-img-overlay"></div>
                                     </div>
-                                    <a click="" difference="" href="/projects/watergate" class="c-portfolio-item w-inline-block">
+                                    <a click="" difference="" href="/watergate" class="c-portfolio-item w-inline-block">
                                         <div class="c-shape portfolio w-embed">
                                             <svg width="100%" viewBox="0 0 67 67" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M55.1706 0.784986L66.2856 11.6036L44.2038 33.6854L65.9892 55.619L55.1706 66.5858L33.0888 44.8004L11.3034 66.4376L0.484801 55.4708L21.9738 33.6854L0.336601 11.9L11.3034 0.784986L33.0888 22.4222L55.1706 0.784986Z" fill="white"/>
@@ -840,7 +840,7 @@
                                         <img loading="eager" alt="" src="https://assets-global.website-files.com/6499b4ba68bde9623cafd7f2/64d49efdc96909a62edd70ad_Nara-Ya-Cover.webp" class="c-img"/>
                                         <div class="c-img-overlay"></div>
                                     </div>
-                                    <a click="" difference="" href="/projects/nara-ya" class="c-portfolio-item w-inline-block">
+                                    <a click="" difference="" href="/nara-ya" class="c-portfolio-item w-inline-block">
                                         <div class="c-shape portfolio w-embed">
                                             <svg width="100%" viewBox="0 0 67 67" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M55.1706 0.784986L66.2856 11.6036L44.2038 33.6854L65.9892 55.619L55.1706 66.5858L33.0888 44.8004L11.3034 66.4376L0.484801 55.4708L21.9738 33.6854L0.336601 11.9L11.3034 0.784986L33.0888 22.4222L55.1706 0.784986Z" fill="white"/>
@@ -880,7 +880,7 @@
                                         <img loading="eager" alt="" src="https://assets-global.website-files.com/6499b4ba68bde9623cafd7f2/64d49e568f0b0d34af064711_Fircrest-Cover.webp" class="c-img"/>
                                         <div class="c-img-overlay"></div>
                                     </div>
-                                    <a click="" difference="" href="/projects/fircrest" class="c-portfolio-item w-inline-block">
+                                    <a click="" difference="" href="/fircrest" class="c-portfolio-item w-inline-block">
                                         <div class="c-shape portfolio w-embed">
                                             <svg width="100%" viewBox="0 0 67 67" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M55.1706 0.784986L66.2856 11.6036L44.2038 33.6854L65.9892 55.619L55.1706 66.5858L33.0888 44.8004L11.3034 66.4376L0.484801 55.4708L21.9738 33.6854L0.336601 11.9L11.3034 0.784986L33.0888 22.4222L55.1706 0.784986Z" fill="white"/>
@@ -900,7 +900,7 @@
                                         <img loading="eager" alt="" src="https://assets-global.website-files.com/6499b4ba68bde9623cafd7f2/651eccab35b75e7485ba4c68_CoCoBs-Image%201.webp" class="c-img"/>
                                         <div class="c-img-overlay"></div>
                                     </div>
-                                    <a click="" difference="" href="/projects/coco-bs" class="c-portfolio-item w-inline-block">
+                                    <a click="" difference="" href="/coco-bs" class="c-portfolio-item w-inline-block">
                                         <div class="c-shape portfolio w-embed">
                                             <svg width="100%" viewBox="0 0 67 67" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M55.1706 0.784986L66.2856 11.6036L44.2038 33.6854L65.9892 55.619L55.1706 66.5858L33.0888 44.8004L11.3034 66.4376L0.484801 55.4708L21.9738 33.6854L0.336601 11.9L11.3034 0.784986L33.0888 22.4222L55.1706 0.784986Z" fill="white"/>
@@ -920,7 +920,7 @@
                                         <img loading="eager" alt="" src="https://assets-global.website-files.com/6499b4ba68bde9623cafd7f2/64d49f2db818038257b90a5c_Matt%26Tony%27s-%20Image%201.webp" class="c-img"/>
                                         <div class="c-img-overlay"></div>
                                     </div>
-                                    <a click="" difference="" href="/projects/matt-tonys" class="c-portfolio-item w-inline-block">
+                                    <a click="" difference="" href="/matt-tonys" class="c-portfolio-item w-inline-block">
                                         <div class="c-shape portfolio w-embed">
                                             <svg width="100%" viewBox="0 0 67 67" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M55.1706 0.784986L66.2856 11.6036L44.2038 33.6854L65.9892 55.619L55.1706 66.5858L33.0888 44.8004L11.3034 66.4376L0.484801 55.4708L21.9738 33.6854L0.336601 11.9L11.3034 0.784986L33.0888 22.4222L55.1706 0.784986Z" fill="white"/>
@@ -940,7 +940,7 @@
                                         <img loading="eager" alt="" src="https://assets-global.website-files.com/6499b4ba68bde9623cafd7f2/64d49f602b478e3c540a5eb3_Alias-%20Image%201.webp" class="c-img"/>
                                         <div class="c-img-overlay"></div>
                                     </div>
-                                    <a click="" difference="" href="/projects/alias" class="c-portfolio-item w-inline-block">
+                                    <a click="" difference="" href="/alias" class="c-portfolio-item w-inline-block">
                                         <div class="c-shape portfolio w-embed">
                                             <svg width="100%" viewBox="0 0 67 67" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M55.1706 0.784986L66.2856 11.6036L44.2038 33.6854L65.9892 55.619L55.1706 66.5858L33.0888 44.8004L11.3034 66.4376L0.484801 55.4708L21.9738 33.6854L0.336601 11.9L11.3034 0.784986L33.0888 22.4222L55.1706 0.784986Z" fill="white"/>
@@ -960,7 +960,7 @@
                                         <img loading="eager" alt="" src="https://assets-global.website-files.com/6499b4ba68bde9623cafd7f2/64d49f924a337a3283eb5e1a_Mia%27s-Cover.webp" class="c-img"/>
                                         <div class="c-img-overlay"></div>
                                     </div>
-                                    <a click="" difference="" href="/projects/mias" class="c-portfolio-item w-inline-block">
+                                    <a click="" difference="" href="/mias" class="c-portfolio-item w-inline-block">
                                         <div class="c-shape portfolio w-embed">
                                             <svg width="100%" viewBox="0 0 67 67" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M55.1706 0.784986L66.2856 11.6036L44.2038 33.6854L65.9892 55.619L55.1706 66.5858L33.0888 44.8004L11.3034 66.4376L0.484801 55.4708L21.9738 33.6854L0.336601 11.9L11.3034 0.784986L33.0888 22.4222L55.1706 0.784986Z" fill="white"/>
@@ -980,7 +980,7 @@
                                         <img loading="eager" alt="" src="https://assets-global.website-files.com/6499b4ba68bde9623cafd7f2/64d49fcb0c40835936e9e195_Pamplona-Cover.webp" class="c-img"/>
                                         <div class="c-img-overlay"></div>
                                     </div>
-                                    <a click="" difference="" href="/projects/pamplona" class="c-portfolio-item w-inline-block">
+                                    <a click="" difference="" href="/pamplona" class="c-portfolio-item w-inline-block">
                                         <div class="c-shape portfolio w-embed">
                                             <svg width="100%" viewBox="0 0 67 67" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M55.1706 0.784986L66.2856 11.6036L44.2038 33.6854L65.9892 55.619L55.1706 66.5858L33.0888 44.8004L11.3034 66.4376L0.484801 55.4708L21.9738 33.6854L0.336601 11.9L11.3034 0.784986L33.0888 22.4222L55.1706 0.784986Z" fill="white"/>
@@ -1000,7 +1000,7 @@
                                         <img loading="eager" alt="" src="https://assets-global.website-files.com/6499b4ba68bde9623cafd7f2/64d4a00c5f8da735703cc27e_P14-Cover.webp" class="c-img"/>
                                         <div class="c-img-overlay"></div>
                                     </div>
-                                    <a click="" difference="" href="/projects/p14" class="c-portfolio-item w-inline-block">
+                                    <a click="" difference="" href="/p14" class="c-portfolio-item w-inline-block">
                                         <div class="c-shape portfolio w-embed">
                                             <svg width="100%" viewBox="0 0 67 67" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M55.1706 0.784986L66.2856 11.6036L44.2038 33.6854L65.9892 55.619L55.1706 66.5858L33.0888 44.8004L11.3034 66.4376L0.484801 55.4708L21.9738 33.6854L0.336601 11.9L11.3034 0.784986L33.0888 22.4222L55.1706 0.784986Z" fill="white"/>
