--- a/portfolio.html
+++ b/portfolio.html
@@ -800,7 +800,7 @@
                                         <img loading="eager" alt="" src="https://assets-global.website-files.com/6499b4ba68bde9623cafd7f2/64d49ecd76464e68693da935_PenthouseLaVie-%20Image%201.webp" class="c-img"/>
                                         <div class="c-img-overlay"></div>
                                     </div>
-                                    <a click="" difference="" href="/penthouse-at-la-vie" class="c-portfolio-item w-inline-block">
+                                    <a click="" difference="" href="/penthouse-at-la-vie.html" class="c-portfolio-item w-inline-block">
                                         <div class="c-shape portfolio w-embed">
                                             <svg width="100%" viewBox="0 0 67 67" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M55.1706 0.784986L66.2856 11.6036L44.2038 33.6854L65.9892 55.619L55.1706 66.5858L33.0888 44.8004L11.3034 66.4376L0.484801 55.4708L21.9738 33.6854L0.336601 11.9L11.3034 0.784986L33.0888 22.4222L55.1706 0.784986Z" fill="white"/>
