--- a/about.html
+++ b/about.html
@@ -240,11 +240,11 @@
                         <a url="/portfolio.html?category=Private" portfolio-link="" href="#" class="c-portmenu-link w-inline-block">
                             <div class="t-body-1">private</div>
                         </a>
-                        <a href="/peek" class="c-portmenu-link w-inline-block">
+                        <a href="/peek.html" class="c-portmenu-link w-inline-block">
                             <div class="t-body-1">peek</div>
                         </a>
                         <div class="w-embed">
-                            <a href="/b-sides" class="c-portmenu-link w-inline-block">
+                            <a href="/b-sides.html" class="c-portmenu-link w-inline-block">
                                 <div class="t-body-1">b-sides</div>
                             </a>
                         </div>
