--- a/index.html
+++ b/index.html
@@ -262,11 +262,11 @@
                         <a url="/portfolio.html?category=Private" portfolio-link="" href="#" class="c-portmenu-link w-inline-block">
                             <div class="t-body-1">private</div>
                         </a>
-                        <a href="/peek" class="c-portmenu-link w-inline-block">
+                        <a href="/peek.html" class="c-portmenu-link w-inline-block">
                             <div class="t-body-1">peek</div>
                         </a>
                         <div class="w-embed">
-                            <a href="/b-sides" class="c-portmenu-link w-inline-block">
+                            <a href="/b-sides.html" class="c-portmenu-link w-inline-block">
                                 <div class="t-body-1">b-sides</div>
                             </a>
                         </div>
@@ -937,7 +937,7 @@
                                         </svg>
                                     </div>
                                 </a>
-                                <a href="/peek" class="c-projects-list-item w-inline-block">
+                                <a href="/peek.html" class="c-projects-list-item w-inline-block">
                                     <div class="c-shape hm-projects w-embed">
                                         <svg width="100%" viewBox="0 0 67 67" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M55.1706 0.784986L66.2856 11.6036L44.2038 33.6854L65.9892 55.619L55.1706 66.5858L33.0888 44.8004L11.3034 66.4376L0.484801 55.4708L21.9738 33.6854L0.336601 11.9L11.3034 0.784986L33.0888 22.4222L55.1706 0.784986Z" fill="white"/>
@@ -951,7 +951,7 @@
                                     </div>
                                 </a>
                                 <div class="c-projects-list-item w-embed">
-                                    <a href="/b-sides" class="c-projects-list-item w-inline-block">
+                                    <a href="/b-sides.html" class="c-projects-list-item w-inline-block">
                                         <div class="c-shape hm-projects w-embed">
                                             <svg width="100%" viewBox="0 0 67 67" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M55.1706 0.784986L66.2856 11.6036L44.2038 33.6854L65.9892 55.619L55.1706 66.5858L33.0888 44.8004L11.3034 66.4376L0.484801 55.4708L21.9738 33.6854L0.336601 11.9L11.3034 0.784986L33.0888 22.4222L55.1706 0.784986Z" fill="white"></path>
