--- a/portfolio.html
+++ b/portfolio.html
@@ -241,11 +241,11 @@
                         <a url="/portfolio.html?category=Private" portfolio-link="" href="#" class="c-portmenu-link w-inline-block">
                             <div class="t-body-1">private</div>
                         </a>
-                        <a href="/peek" class="c-portmenu-link w-inline-block">
+                        <a href="/peek.html" class="c-portmenu-link w-inline-block">
                             <div class="t-body-1">peek</div>
                         </a>
                         <div class="w-embed">
-                            <a href="/b-sides" class="c-portmenu-link w-inline-block">
+                            <a href="/b-sides.html" class="c-portmenu-link w-inline-block">
                                 <div class="t-body-1">b-sides</div>
                             </a>
                         </div>
@@ -780,7 +780,7 @@
                                         <img loading="eager" alt="" src="https://assets-global.website-files.com/6499b4ba68bde9623cafd7f2/64d4a0724a811852daa8bdb4_Fircrest1.webp" class="c-img"/>
                                         <div class="c-img-overlay"></div>
                                     </div>
-                                    <a click="" difference="" href="/b-sides" class="c-portfolio-item w-inline-block">
+                                    <a click="" difference="" href="/b-sides.html" class="c-portfolio-item w-inline-block">
                                         <div class="c-shape portfolio w-embed">
                                             <svg width="100%" viewBox="0 0 67 67" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M55.1706 0.784986L66.2856 11.6036L44.2038 33.6854L65.9892 55.619L55.1706 66.5858L33.0888 44.8004L11.3034 66.4376L0.484801 55.4708L21.9738 33.6854L0.336601 11.9L11.3034 0.784986L33.0888 22.4222L55.1706 0.784986Z" fill="white"/>
@@ -820,7 +820,7 @@
                                         <img loading="eager" alt="" src="https://assets-global.website-files.com/6499b4ba68bde9623cafd7f2/64d49db9c96909a62edbc443_Watergate-Cover.webp" class="c-img"/>
                                         <div class="c-img-overlay"></div>
                                     </div>
-                                    <a click="" difference="" href="/watergate" class="c-portfolio-item w-inline-block">
+                                    <a click="" difference="" href="/watergate.html" class="c-portfolio-item w-inline-block">
                                         <div class="c-shape portfolio w-embed">
                                             <svg width="100%" viewBox="0 0 67 67" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M55.1706 0.784986L66.2856 11.6036L44.2038 33.6854L65.9892 55.619L55.1706 66.5858L33.0888 44.8004L11.3034 66.4376L0.484801 55.4708L21.9738 33.6854L0.336601 11.9L11.3034 0.784986L33.0888 22.4222L55.1706 0.784986Z" fill="white"/>
@@ -840,7 +840,7 @@
                                         <img loading="eager" alt="" src="https://assets-global.website-files.com/6499b4ba68bde9623cafd7f2/64d49efdc96909a62edd70ad_Nara-Ya-Cover.webp" class="c-img"/>
                                         <div class="c-img-overlay"></div>
                                     </div>
-                                    <a click="" difference="" href="/nara-ya" class="c-portfolio-item w-inline-block">
+                                    <a click="" difference="" href="/nara-ya.html" class="c-portfolio-item w-inline-block">
                                         <div class="c-shape portfolio w-embed">
                                             <svg width="100%" viewBox="0 0 67 67" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M55.1706 0.784986L66.2856 11.6036L44.2038 33.6854L65.9892 55.619L55.1706 66.5858L33.0888 44.8004L11.3034 66.4376L0.484801 55.4708L21.9738 33.6854L0.336601 11.9L11.3034 0.784986L33.0888 22.4222L55.1706 0.784986Z" fill="white"/>
@@ -860,7 +860,7 @@
                                         <img loading="eager" alt="" src="https://assets-global.website-files.com/6499b4ba68bde9623cafd7f2/64d49e1ee2ae4142e1233578_Prince%20St-%20Image%201.webp" class="c-img"/>
                                         <div class="c-img-overlay"></div>
                                     </div>
-                                    <a click="" difference="" href="/prince-st" class="c-portfolio-item w-inline-block">
+                                    <a click="" difference="" href="/prince-st.html" class="c-portfolio-item w-inline-block">
                                         <div class="c-shape portfolio w-embed">
                                             <svg width="100%" viewBox="0 0 67 67" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M55.1706 0.784986L66.2856 11.6036L44.2038 33.6854L65.9892 55.619L55.1706 66.5858L33.0888 44.8004L11.3034 66.4376L0.484801 55.4708L21.9738 33.6854L0.336601 11.9L11.3034 0.784986L33.0888 22.4222L55.1706 0.784986Z" fill="white"/>
@@ -880,7 +880,7 @@
                                         <img loading="eager" alt="" src="https://assets-global.website-files.com/6499b4ba68bde9623cafd7f2/64d49e568f0b0d34af064711_Fircrest-Cover.webp" class="c-img"/>
                                         <div class="c-img-overlay"></div>
                                     </div>
-                                    <a click="" difference="" href="/fircrest" class="c-portfolio-item w-inline-block">
+                                    <a click="" difference="" href="/fircrest.html" class="c-portfolio-item w-inline-block">
                                         <div class="c-shape portfolio w-embed">
                                             <svg width="100%" viewBox="0 0 67 67" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M55.1706 0.784986L66.2856 11.6036L44.2038 33.6854L65.9892 55.619L55.1706 66.5858L33.0888 44.8004L11.3034 66.4376L0.484801 55.4708L21.9738 33.6854L0.336601 11.9L11.3034 0.784986L33.0888 22.4222L55.1706 0.784986Z" fill="white"/>
@@ -900,7 +900,7 @@
                                         <img loading="eager" alt="" src="https://assets-global.website-files.com/6499b4ba68bde9623cafd7f2/651eccab35b75e7485ba4c68_CoCoBs-Image%201.webp" class="c-img"/>
                                         <div class="c-img-overlay"></div>
                                     </div>
-                                    <a click="" difference="" href="/coco-bs" class="c-portfolio-item w-inline-block">
+                                    <a click="" difference="" href="/coco-bs.html" class="c-portfolio-item w-inline-block">
                                         <div class="c-shape portfolio w-embed">
                                             <svg width="100%" viewBox="0 0 67 67" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M55.1706 0.784986L66.2856 11.6036L44.2038 33.6854L65.9892 55.619L55.1706 66.5858L33.0888 44.8004L11.3034 66.4376L0.484801 55.4708L21.9738 33.6854L0.336601 11.9L11.3034 0.784986L33.0888 22.4222L55.1706 0.784986Z" fill="white"/>
@@ -920,7 +920,7 @@
                                         <img loading="eager" alt="" src="https://assets-global.website-files.com/6499b4ba68bde9623cafd7f2/64d49f2db818038257b90a5c_Matt%26Tony%27s-%20Image%201.webp" class="c-img"/>
                                         <div class="c-img-overlay"></div>
                                     </div>
-                                    <a click="" difference="" href="/matt-tonys" class="c-portfolio-item w-inline-block">
+                                    <a click="" difference="" href="/matt-tonys.html" class="c-portfolio-item w-inline-block">
                                         <div class="c-shape portfolio w-embed">
                                             <svg width="100%" viewBox="0 0 67 67" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M55.1706 0.784986L66.2856 11.6036L44.2038 33.6854L65.9892 55.619L55.1706 66.5858L33.0888 44.8004L11.3034 66.4376L0.484801 55.4708L21.9738 33.6854L0.336601 11.9L11.3034 0.784986L33.0888 22.4222L55.1706 0.784986Z" fill="white"/>
@@ -940,7 +940,7 @@
                                         <img loading="eager" alt="" src="https://assets-global.website-files.com/6499b4ba68bde9623cafd7f2/64d49f602b478e3c540a5eb3_Alias-%20Image%201.webp" class="c-img"/>
                                         <div class="c-img-overlay"></div>
                                     </div>
-                                    <a click="" difference="" href="/alias" class="c-portfolio-item w-inline-block">
+                                    <a click="" difference="" href="/alias.html" class="c-portfolio-item w-inline-block">
                                         <div class="c-shape portfolio w-embed">
                                             <svg width="100%" viewBox="0 0 67 67" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M55.1706 0.784986L66.2856 11.6036L44.2038 33.6854L65.9892 55.619L55.1706 66.5858L33.0888 44.8004L11.3034 66.4376L0.484801 55.4708L21.9738 33.6854L0.336601 11.9L11.3034 0.784986L33.0888 22.4222L55.1706 0.784986Z" fill="white"/>
@@ -960,7 +960,7 @@
                                         <img loading="eager" alt="" src="https://assets-global.website-files.com/6499b4ba68bde9623cafd7f2/64d49f924a337a3283eb5e1a_Mia%27s-Cover.webp" class="c-img"/>
                                         <div class="c-img-overlay"></div>
                                     </div>
-                                    <a click="" difference="" href="/mias" class="c-portfolio-item w-inline-block">
+                                    <a click="" difference="" href="/mias.html" class="c-portfolio-item w-inline-block">
                                         <div class="c-shape portfolio w-embed">
                                             <svg width="100%" viewBox="0 0 67 67" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M55.1706 0.784986L66.2856 11.6036L44.2038 33.6854L65.9892 55.619L55.1706 66.5858L33.0888 44.8004L11.3034 66.4376L0.484801 55.4708L21.9738 33.6854L0.336601 11.9L11.3034 0.784986L33.0888 22.4222L55.1706 0.784986Z" fill="white"/>
@@ -980,7 +980,7 @@
                                         <img loading="eager" alt="" src="https://assets-global.website-files.com/6499b4ba68bde9623cafd7f2/64d49fcb0c40835936e9e195_Pamplona-Cover.webp" class="c-img"/>
                                         <div class="c-img-overlay"></div>
                                     </div>
-                                    <a click="" difference="" href="/pamplona" class="c-portfolio-item w-inline-block">
+                                    <a click="" difference="" href="/pamplona.html" class="c-portfolio-item w-inline-block">
                                         <div class="c-shape portfolio w-embed">
                                             <svg width="100%" viewBox="0 0 67 67" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M55.1706 0.784986L66.2856 11.6036L44.2038 33.6854L65.9892 55.619L55.1706 66.5858L33.0888 44.8004L11.3034 66.4376L0.484801 55.4708L21.9738 33.6854L0.336601 11.9L11.3034 0.784986L33.0888 22.4222L55.1706 0.784986Z" fill="white"/>
@@ -1000,7 +1000,7 @@
                                         <img loading="eager" alt="" src="https://assets-global.website-files.com/6499b4ba68bde9623cafd7f2/64d4a00c5f8da735703cc27e_P14-Cover.webp" class="c-img"/>
                                         <div class="c-img-overlay"></div>
                                     </div>
-                                    <a click="" difference="" href="/p14" class="c-portfolio-item w-inline-block">
+                                    <a click="" difference="" href="/p14.html" class="c-portfolio-item w-inline-block">
                                         <div class="c-shape portfolio w-embed">
                                             <svg width="100%" viewBox="0 0 67 67" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M55.1706 0.784986L66.2856 11.6036L44.2038 33.6854L65.9892 55.619L55.1706 66.5858L33.0888 44.8004L11.3034 66.4376L0.484801 55.4708L21.9738 33.6854L0.336601 11.9L11.3034 0.784986L33.0888 22.4222L55.1706 0.784986Z" fill="white"/>
@@ -1037,11 +1037,11 @@
                                         </div>
                                     </div>
                                 </div>
-                                <a href="/peek" click="" class="c-portfolio-nav-link-peek w-inline-block">
+                                <a href="/peek.html" click="" class="c-portfolio-nav-link-peek w-inline-block">
                                     <div class="t-body-3">peek</div>
                                 </a>
                                 <div b-sides-link="" class="c-link-embed is-port w-embed">
-                                    <a href="/b-sides" click="" class="c-portfolio-nav-link.is-peek">
+                                    <a href="/b-sides.html" click="" class="c-portfolio-nav-link.is-peek">
                                         <div class="t-body-3">b-sides</div>
                                     </a>
                                 </div>
@@ -1060,7 +1060,7 @@
                         <div class="o-row margin-124">
                             <div class="o-col _w-1 hide-tablet"></div>
                             <div class="o-col _w-5 md-w-24">
-                                <a href="/contact" class="c-hm-contact touch w-inline-block">
+                                <a href="/contact.html" class="c-hm-contact touch w-inline-block">
                                     <div class="c-icon hm-contact w-embed">
                                         <svg class="c-contact-icon" width="100%" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 41 30">
                                             <path fill="#fff" fill-rule="evenodd" d="M.5 2C.5 1.2 1.2.5 2 .5h37c.8 0 1.5.7 1.5 1.5v26c0 .8-.7 1.5-1.5 1.5H2c-.8 0-1.5-.7-1.5-1.5V2Zm5 1.5 15 15.2 15-15.2h-30Zm32 2.2-9.6 9.8 9.6 9V5.7Zm-2.3 20.8-9.4-8.9-4.2 4.3a1.5 1.5 0 0 1-2.2 0l-4.2-4.3-9.4 8.9h29.4Zm-31.7-2V5.7l9.6 9.8-9.6 9Z" clip-rule="evenodd"/>
