--- a/watergate.html
+++ b/watergate.html
@@ -241,11 +241,11 @@
                         <a url="/portfolio.html?category=Private" portfolio-link="" href="#" class="c-portmenu-link w-inline-block">
                             <div class="t-body-1">private</div>
                         </a>
-                        <a href="/peek" class="c-portmenu-link w-inline-block">
+                        <a href="/peek.html" class="c-portmenu-link w-inline-block">
                             <div class="t-body-1">peek</div>
                         </a>
                         <div class="w-embed">
-                            <a href="/b-sides" class="c-portmenu-link w-inline-block">
+                            <a href="/b-sides.html" class="c-portmenu-link w-inline-block">
                                 <div class="t-body-1">b-sides</div>
                             </a>
                         </div>
@@ -788,11 +788,11 @@
                             <a href="#" url="/portfolio.html?category=Private" click="" portfolio-link="" class="c-portfolio-nav-link is-peek w-inline-block">
                                 <div class="t-body-3">Private</div>
                             </a>
-                            <a href="/peek" click="" class="c-portfolio-nav-link is-peek w-inline-block">
+                            <a href="/peek.html" click="" class="c-portfolio-nav-link is-peek w-inline-block">
                                 <div class="t-body-3">peek</div>
                             </a>
                             <div class="c-link-embed is-active w-embed">
-                                <a href="/b-sides" click="" class="c-portfolio-nav-link is-peek is-active w-inline-block">
+                                <a href="/b-sides.html" click="" class="c-portfolio-nav-link is-peek is-active w-inline-block">
                                     <div class="t-body-3">b-sides</div>
                                 </a>
                             </div>
